gramaticaParser.py
# Generated from gramatica.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gramaticaParser ( Parser ):

    grammarFileName = "gramatica.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'math'", "'np'", "'sin'", "'cos'", "'tan'", 
                     "'arcsin'", "'arccos'", "'arctan'", "'factorial'", 
                     "'sqrt'", "'inv'", "'trans'", "'matplotlib.pyplot'", 
                     "'numpy as np'", "'plot'", "'scatter'", "'fill_between'", 
                     "'bar'", "'barh'", "'hist'", "'pie'", "'boxplot'", 
                     "'grafsen'", "'grafcos'", "'graftan'", "'linspace'", 
                     "'pi'", "'\\u00AC'", "'~'", "'!'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'import'", "'def'", "'class'", 
                     "'if'", "'else'", "'for'", "'in'", "'range'", "'self'", 
                     "'while'", "'try'", "'end'", "'except'", "'return'", 
                     "'break'", "'next'", "'input'", "'print'", "'int'", 
                     "'float'", "<INVALID>", "'str'", "'pow'", "'mathsqrt'", 
                     "'and'", "'or'", "'not'", "'elif'", "'+'", "'='", "'-'", 
                     "'/'", "'*'", "'=='", "'!='", "'>'", "'<'", "'>='", 
                     "'<='", "'.'", "','", "':'", "';'", "'''", "'\"'", 
                     "'('", "')'", "'}'", "'{'", "'['", "']'", "'++'", "'--'", 
                     "'^'", "'%'", "'write'", "'open'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "SEP", "ESP", "EX", "NEWLINE", "NUMERO", "ID", "WS", 
                      "IMPORT", "DEF", "CLASS", "IF", "ELSE", "FOR", "IN", 
                      "RANGE", "SELF", "WHILE", "TRY", "END", "EXCEPT", 
                      "RETURN", "BREAK", "NEXT", "INPUT", "PRINT", "INT", 
                      "FLOAT", "BOOLEAN", "STR", "POW", "MATHSQRT", "AND", 
                      "OR", "NOT", "ELIF", "SUMA", "ASIGNACION", "RESTA", 
                      "DIVISION", "MULTIPLICACION", "IGUAL", "DIFERENTE", 
                      "MAYORQUE", "MENORQUE", "MENORIGUAL", "MAYORIGUAL", 
                      "PUNTO", "COMA", "DOSPUNTOS", "PUNTOCOMA", "COMILLASIMPLE", 
                      "COMILLADOBLE", "PARENTESIS_A", "PARENTESIS_C", "LLAVE_C", 
                      "LLAVE_A", "CORCHETE_A", "CORCHETE_C", "MASMAS", "MENOSMENOS", 
                      "POTENCIA", "MODULO", "WRITE", "OPEN" ]

    RULE_start = 0
    RULE_sentencias = 1
    RULE_asignacion = 2
    RULE_v_input = 3
    RULE_printf = 4
    RULE_var_casteo = 5
    RULE_casteo = 6
    RULE_cadena = 7
    RULE_funcion = 8
    RULE_v_return = 9
    RULE_llamafuncion = 10
    RULE_condicional = 11
    RULE_elifBlock = 12
    RULE_condicional_elif = 13
    RULE_condicional_else = 14
    RULE_ciclo_for = 15
    RULE_ciclo_while = 16
    RULE_parametro = 17
    RULE_func = 18
    RULE_expresion = 19
    RULE_matriz_operaciones = 20
    RULE_matriz = 21
    RULE_fila_matriz = 22
    RULE_importss = 23
    RULE_termino = 24
    RULE_lista = 25
    RULE_arreglo = 26
    RULE_graficas = 27
    RULE_arange = 28
    RULE_lectura_archivo = 29
    RULE_escritura_archivo = 30

    ruleNames =  [ "start", "sentencias", "asignacion", "v_input", "printf", 
                   "var_casteo", "casteo", "cadena", "funcion", "v_return", 
                   "llamafuncion", "condicional", "elifBlock", "condicional_elif", 
                   "condicional_else", "ciclo_for", "ciclo_while", "parametro", 
                   "func", "expresion", "matriz_operaciones", "matriz", 
                   "fila_matriz", "importss", "termino", "lista", "arreglo", 
                   "graficas", "arange", "lectura_archivo", "escritura_archivo" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    SEP=28
    ESP=29
    EX=30
    NEWLINE=31
    NUMERO=32
    ID=33
    WS=34
    IMPORT=35
    DEF=36
    CLASS=37
    IF=38
    ELSE=39
    FOR=40
    IN=41
    RANGE=42
    SELF=43
    WHILE=44
    TRY=45
    END=46
    EXCEPT=47
    RETURN=48
    BREAK=49
    NEXT=50
    INPUT=51
    PRINT=52
    INT=53
    FLOAT=54
    BOOLEAN=55
    STR=56
    POW=57
    MATHSQRT=58
    AND=59
    OR=60
    NOT=61
    ELIF=62
    SUMA=63
    ASIGNACION=64
    RESTA=65
    DIVISION=66
    MULTIPLICACION=67
    IGUAL=68
    DIFERENTE=69
    MAYORQUE=70
    MENORQUE=71
    MENORIGUAL=72
    MAYORIGUAL=73
    PUNTO=74
    COMA=75
    DOSPUNTOS=76
    PUNTOCOMA=77
    COMILLASIMPLE=78
    COMILLADOBLE=79
    PARENTESIS_A=80
    PARENTESIS_C=81
    LLAVE_C=82
    LLAVE_A=83
    CORCHETE_A=84
    CORCHETE_C=85
    MASMAS=86
    MENOSMENOS=87
    POTENCIA=88
    MODULO=89
    WRITE=90
    OPEN=91

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentencias(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramaticaParser.SentenciasContext)
            else:
                return self.getTypedRuleContext(gramaticaParser.SentenciasContext,i)


        def getRuleIndex(self):
            return gramaticaParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = gramaticaParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 62
                self.sentencias()
                self.state = 65 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 141882473016432646) != 0) or ((((_la - 78)) & ~0x3f) == 0 and ((1 << (_la - 78)) & 12359) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def printf(self):
            return self.getTypedRuleContext(gramaticaParser.PrintfContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(gramaticaParser.AsignacionContext,0)


        def condicional(self):
            return self.getTypedRuleContext(gramaticaParser.CondicionalContext,0)


        def ciclo_while(self):
            return self.getTypedRuleContext(gramaticaParser.Ciclo_whileContext,0)


        def expresion(self):
            return self.getTypedRuleContext(gramaticaParser.ExpresionContext,0)


        def funcion(self):
            return self.getTypedRuleContext(gramaticaParser.FuncionContext,0)


        def llamafuncion(self):
            return self.getTypedRuleContext(gramaticaParser.LlamafuncionContext,0)


        def ciclo_for(self):
            return self.getTypedRuleContext(gramaticaParser.Ciclo_forContext,0)


        def v_input(self):
            return self.getTypedRuleContext(gramaticaParser.V_inputContext,0)


        def casteo(self):
            return self.getTypedRuleContext(gramaticaParser.CasteoContext,0)


        def graficas(self):
            return self.getTypedRuleContext(gramaticaParser.GraficasContext,0)


        def importss(self):
            return self.getTypedRuleContext(gramaticaParser.ImportssContext,0)


        def func(self):
            return self.getTypedRuleContext(gramaticaParser.FuncContext,0)


        def matriz_operaciones(self):
            return self.getTypedRuleContext(gramaticaParser.Matriz_operacionesContext,0)


        def NEWLINE(self):
            return self.getToken(gramaticaParser.NEWLINE, 0)

        def lectura_archivo(self):
            return self.getTypedRuleContext(gramaticaParser.Lectura_archivoContext,0)


        def escritura_archivo(self):
            return self.getTypedRuleContext(gramaticaParser.Escritura_archivoContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_sentencias

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencias" ):
                listener.enterSentencias(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencias" ):
                listener.exitSentencias(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencias" ):
                return visitor.visitSentencias(self)
            else:
                return visitor.visitChildren(self)




    def sentencias(self):

        localctx = gramaticaParser.SentenciasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentencias)
        try:
            self.state = 84
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.printf()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.asignacion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.condicional()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 70
                self.ciclo_while()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 71
                self.expresion(0)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 72
                self.funcion()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 73
                self.llamafuncion()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 74
                self.ciclo_for()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 75
                self.v_input()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 76
                self.casteo()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 77
                self.graficas()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 78
                self.importss()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 79
                self.func()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 80
                self.matriz_operaciones()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 81
                self.match(gramaticaParser.NEWLINE)
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 82
                self.lectura_archivo()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 83
                self.escritura_archivo()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.ID)
            else:
                return self.getToken(gramaticaParser.ID, i)

        def ASIGNACION(self):
            return self.getToken(gramaticaParser.ASIGNACION, 0)

        def expresion(self):
            return self.getTypedRuleContext(gramaticaParser.ExpresionContext,0)


        def v_input(self):
            return self.getTypedRuleContext(gramaticaParser.V_inputContext,0)


        def matriz_operaciones(self):
            return self.getTypedRuleContext(gramaticaParser.Matriz_operacionesContext,0)


        def arange(self):
            return self.getTypedRuleContext(gramaticaParser.ArangeContext,0)


        def var_casteo(self):
            return self.getTypedRuleContext(gramaticaParser.Var_casteoContext,0)


        def PARENTESIS_A(self):
            return self.getToken(gramaticaParser.PARENTESIS_A, 0)

        def PARENTESIS_C(self):
            return self.getToken(gramaticaParser.PARENTESIS_C, 0)

        def parametro(self):
            return self.getTypedRuleContext(gramaticaParser.ParametroContext,0)


        def cadena(self):
            return self.getTypedRuleContext(gramaticaParser.CadenaContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = gramaticaParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_asignacion)
        self._la = 0 # Token type
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.match(gramaticaParser.ID)
                self.state = 87
                self.match(gramaticaParser.ASIGNACION)
                self.state = 89
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 88
                    self.var_casteo()


                self.state = 92
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 91
                    self.match(gramaticaParser.PARENTESIS_A)


                self.state = 98
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 94
                    self.expresion(0)
                    pass

                elif la_ == 2:
                    self.state = 95
                    self.v_input()
                    pass

                elif la_ == 3:
                    self.state = 96
                    self.matriz_operaciones()
                    pass

                elif la_ == 4:
                    self.state = 97
                    self.arange()
                    pass


                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==81:
                    self.state = 100
                    self.match(gramaticaParser.PARENTESIS_C)


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.match(gramaticaParser.ID)
                self.state = 104
                self.match(gramaticaParser.ASIGNACION)
                self.state = 105
                self.match(gramaticaParser.ID)
                self.state = 106
                self.match(gramaticaParser.PARENTESIS_A)
                self.state = 110
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 107
                    self.parametro()

                elif la_ == 2:
                    self.state = 108
                    self.expresion(0)

                elif la_ == 3:
                    self.state = 109
                    self.matriz_operaciones()


                self.state = 112
                self.match(gramaticaParser.PARENTESIS_C)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 113
                self.match(gramaticaParser.ID)
                self.state = 114
                self.match(gramaticaParser.ASIGNACION)
                self.state = 115
                self.cadena()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class V_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INPUT(self):
            return self.getToken(gramaticaParser.INPUT, 0)

        def PARENTESIS_A(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.PARENTESIS_A)
            else:
                return self.getToken(gramaticaParser.PARENTESIS_A, i)

        def PARENTESIS_C(self, i:int=None):
            if i is None:
                return self.getTokens(gramaticaParser.PARENTESIS_C)
            else:
                return self.getToken(gramaticaParser.PARENTESIS_C, i)

        def var_casteo(self):
            return self.getTypedRuleContext(gramaticaParser.Var_casteoContext,0)


        def expresion(self):
            return self.getTypedRuleContext(gramaticaParser.ExpresionContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_v_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterV_input" ):
                listener.enterV_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitV_input" ):
                listener.exitV_input(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitV_input" ):
                return visitor.visitV_input(self)
            else:
                return visitor.visitChildren(self)




    def v_input(self):

        localctx = gramaticaParser.V_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_v_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 135107988821114880) != 0):
                self.state = 118
                self.var_casteo()


            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==80:
                self.state = 121
                self.match(gramaticaParser.PARENTESIS_A)


            self.state = 124
            self.match(gramaticaParser.INPUT)
            self.state = 125
            self.match(gramaticaParser.PARENTESIS_A)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 36028809903865862) != 0) or ((((_la - 78)) & ~0x3f) == 0 and ((1 << (_la - 78)) & 71) != 0):
                self.state = 126
                self.expresion(0)


            self.state = 129
            self.match(gramaticaParser.PARENTESIS_C)
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 130
                self.match(gramaticaParser.PARENTESIS_C)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(gramaticaParser.PRINT, 0)

        def PARENTESIS_A(self):
            return self.getToken(gramaticaParser.PARENTESIS_A, 0)

        def PARENTESIS_C(self):
            return self.getToken(gramaticaParser.PARENTESIS_C, 0)

        def expresion(self):
            return self.getTypedRuleContext(gramaticaParser.ExpresionContext,0)


        def COMA(self):
            return self.getToken(gramaticaParser.COMA, 0)

        def matriz_operaciones(self):
            return self.getTypedRuleContext(gramaticaParser.Matriz_operacionesContext,0)


        def getRuleIndex(self):
            return gramaticaParser.RULE_printf

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintf" ):
                listener.enterPrintf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintf" ):
                listener.exitPrintf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintf" ):
                return visitor.visitPrintf(self)
            else:
                return visitor.visitChildren(self)




    def printf(self):

        localctx = gramaticaParser.PrintfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_printf)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(gramaticaParser.PRINT)
            self.state = 134
            self.match(gramaticaParser.PARENTESIS_A)
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 135
                self.expresion(0)

            elif la_ == 2:
                self.state = 136
                self.match(gramaticaParser.COMA)

            elif la_ == 3:
                self.state = 137
                self.matriz_operaciones()


            self.state = 140
            self.match(gramaticaParser.PARENTESIS_C)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_casteoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STR(self):
            return self.getToken(gramaticaParser.STR, 0)

        def INT(self):
            return self.getToken(gramaticaParser.INT, 0)

        def FLOAT(self):
            return self.getToken(gramaticaParser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(gramaticaParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_var_casteo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_casteo" ):
                listener.enterVar_casteo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_casteo" ):
                listener.exitVar_casteo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_casteo" ):
                return visitor.visitVar_casteo(self)
            else:
                return visitor.visitChildren(self)




    def var_casteo(self):

        localctx = gramaticaParser.Var_casteoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_casteo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 135107988821114880) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CasteoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_casteo(self):
            return self.getTypedRuleContext(gramaticaParser.Var_casteoContext,0)


        def PARENTESIS_A(self):
            return self.getToken(gramaticaParser.PARENTESIS_A, 0)

        def expresion(self):
            return self.getTypedRuleContext(gramaticaParser.ExpresionContext,0)


        def PARENTESIS_C(self):
            return self.getToken(gramaticaParser.PARENTESIS_C, 0)

        def getRuleIndex(self):
            return gramaticaParser.RULE_casteo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCasteo" ):
                listener.enterCasteo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCasteo" ):
                listener.exitCasteo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCasteo" ):
                return visitor.visitCasteo(self)
            else:
                return visitor.visitChildren(self)




    def casteo(self):

        localctx = gramaticaParser.CasteoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_casteo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.var_casteo()
            self.state = 145
            self.match(gramaticaParser.PARENTESIS_A)
            self.state = 146
            self.expresion(0)
            self.state = 147
            self.match(gramaticaParser.PARENTESIS_C)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CadenaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
